Fixed Tomcat Configuration